erreur
script.js:68 Error fetching sensor data: SyntaxError: Unexpected non-whitespace character after JSON at position 4 (line 1 column 5)
fetchSensorData @ script.js:68
setInterval (async)
(anonymous) @ script.js:71
script.js:54 
        
        
       POST http://127.0.0.1:1250/read_sensor 500 (Internal Server Error)
fetchSensorData @ script.js:54
setInterval (async)
(anonymous) @ script.js:71
script.js:68 Error fetching sensor data: SyntaxError: Unexpected non-whitespace character after JSON at position 4 (line 1 column 5)


curl -X POST http://127.0.0.1:1250/read_sensor -H "Content-Type: application/json"

Error handling request
Traceback (most recent call last):
  File "/home/felix/env_py/myenv/lib/python3.11/site-packages/aiohttp/web_protocol.py", line 452, in _handle_request
    resp = await request_handler(request)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/felix/env_py/myenv/lib/python3.11/site-packages/aiohttp/web_app.py", line 543, in _handle
    resp = await handler(request)
                 ^^^^^^^^^^^^^^^^
TypeError: read_sensor_data() takes 0 positional arguments but 1 was given

Checksum did not validate. Try again.



